force-app/main/default/objects/Approval_Detail__c/Approval_Detail__c.object-meta.xml
<CustomObject>
    <label>Approval Detail</label>
    <nameField>
        <label>Approval Process Step</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>