force-app/main/default/objects/Approval_Detail__c/fields/Approval_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Name__c</fullName>
    <label>Approval Process Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bid Approval</fullName>
            </value>
            <value>
                <fullName>Proposal Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>