force-app/main/default/objects/Approval_Detail__c/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <formula>ApproverId__r.FirstName &amp; &quot; &quot; &amp;  ApproverId__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Name</label>
    <type>Text</type>
</CustomField>