force-app/main/default/objects/Approval_Detail__c/fields/ApproverId__c.field-meta.xml
<CustomField>
    <fullName>ApproverId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApproverId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>