force-app/main/default/objects/Approval_Detail__c/fields/LinkedEntityId__c.field-meta.xml
<CustomField>
    <fullName>LinkedEntityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LinkedEntityId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>